--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <p> Nivel nativo de valenciano</p>
                 <p> Nivel bajo de portugués </p>
             </article>
+            <h3> Atributos </h3>
             <article>
                 <p> Trabajo bien en cualquier ambiente </p>
                 <p> Buena gestión emocional </p>
