--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
         <section>
             <h1 class="apartado"> Educación y formación </h1>
             <article>
-                <p> <span class="inicio"> 2013-2017:</span> Educación Secundaria Obligatoria. <span class="centro"> IES Joan Llopis Mari</span> (Cullera)</p>
-                <p> <span class="inicio"> 2017-2020</span> Bachillerato de Ciencias. <span class="centro"> IES Joan Llopis Mari</span> (Cullera) </p>
+                <p> <span class="inicio"> 2013-2017:</span> Educación Secundaria Obligatoria. <span class="centro"> IES Joan Llopis Mari</span> (Cullera).</p>
+                <p> <span class="inicio"> 2017-2020</span> Bachillerato de Ciencias. <span class="centro"> IES Joan Llopis Mari</span> (Cullera). </p>
             </article>
         </section>
         <section>
             <h1 class="apartado"> Capacidades y aptitudes personales </h1>
             <h3> Idiomas </h3>
             <article>
-                <p> Buen nivel de inglés y alta compresión de slangs londinenses y atlanteños </p>
-                <p> Nivel nativo de valenciano</p>
-                <p> Nivel bajo de portugués </p>
+                <p> Buen nivel de inglés y alta compresión de slangs londinenses y atlanteños. </p>
+                <p> Nivel nativo de valenciano. </p>
+                <p> Nivel bajo de portugués. </p>
             </article>
             <h3> Atributos </h3>
             <article>
-                <p> Trabajo bien en cualquier ambiente </p>
-                <p> Buena gestión emocional </p>
-                <p> Siempre intento mantener un buen ambiente laboral</p>
+                <p> Trabajo bien en cualquier ambiente. </p>
+                <p> Buena gestión emocional. </p>
+                <p> Siempre intento mantener un buen ambiente laboral.</p>
             </article>
         </section>
     </Main>
